--- a/smb.conf
+++ b/smb.conf
@@ -9,6 +9,11 @@ load printers = no
 socket options = TCP_NODELAY IPTOS_LOWDELAY SO_RCVBUF=524288 SO_SNDBUF=524288
 server string = Samba Server %v
 map to guest = bad user
+
+force user = smbuser
+force group = users
+usershare allow guests = yes
+
 dns proxy = no
 wide links = yes
 follow symlinks = yes
