--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ env:
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - export REPO=nestyurkin/samba4timemachine
-  - docker build -f Dockerfile -t $REPO:$COMMIT .
+  - docker build -f Dockerfile -t $REPO:$COMMIT --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` .
   - docker tag $REPO:$COMMIT $REPO:latest
   - docker push $REPO
